utilisation de ratpack

--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,15 @@ apply plugin: 'idea'
 
 repositories {
 	mavenCentral()
-    maven { url 'http://maven.restlet.org' }
+    maven {url 'http://oss.jfrog.org/artifactory/libs-snapshot'}
 }                 
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.1.7'
-    compile 'org.restlet.jse:org.restlet:2.1.4'
-    compile 'org.restlet.jse:org.restlet.ext.json:2.1.4'
-    compile 'org.restlet.jse:org.restlet.ext.jetty:2.1.4'
     compile 'com.google.guava:guava:15.0'
  	testCompile 'junit:junit:4.11'
     compile 'org.codehaus.gpars:gpars:1.1.0'
+    compile 'org.ratpack-framework:ratpack-groovy:0.9.0-SNAPSHOT'
 }
 
 task wrapper(type: Wrapper) {
